1.1
	+ Allow * character in common names
0.12.101
	+ Set SSLv3 extensions correctly to user certificates
0.12.100
	+ Bugfix: Expire days cannot be zero anymore
0.12.99
	+ New release
0.12
	+ New release
0.11.102
	+ Bugfix: Downloading files, tar is outputting nothing to
	stdout
0.11.101
	+ New release
0.11.100
	+ New release
0.11.99
	+ Check "days" are positive numbers
0.11
	+ New release
0.10.99
	+ New release
0.9.100
	+ New release
0.9.99
	+ Set a CA passphrase optionally
	+ Fixed bug when forcing revoke CA certificate
0.9.3
	+ New release
0.9.2
	+ New release
0.9.1
	+ Fixed a bug related to renew or revoke currently used
	certificates by other modules
	+ Added Cancel buttons where they are necessary
	
0.9
	+ Added Polish translation
	+ Added German translation
	+ Added Aragonese translation
	+ Added Dutch translation
	+ Fixed CRL permission issue related to ebox-openvpn module
	+ Fixed bug related to back up configuration and create a bug
	report when the certification authority has not created yet
	+ Fixed random error issuing certificates
	+ Fixed names to accept all input valid parameters except for '/'
	+ Make Organization Name visible at the GUI

0.8.99	
	+ Initial release
      